# log

./: CMakeLists.txt  README.md  log.cpp  log.hpp  main.cpp
base/: CMakeLists.txt  i_message_formatter.cpp  i_message_formatter.h  message_buffer.hpp  nocopyable.h
base/include/: formatter_base.h  i_message_appender.h  i_message_formatter.h  log_message.h  message_appender_console.h  message_appender_file.h  message_buffer.hpp  nocopyable.h
base/src/: formatter_base.cpp  i_message_formatter.cpp  log_message.cpp  message_appender_console.cpp  message_appender_file.cpp
log/: CMakeLists.txt
log/include/: log.h  log.hpp  log_error_code.h  log_level.h
log/src/: log.cpp
test/: buffer_test.cpp  formatter_test.cpp  log_test.cpp
